Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -222,7 +222,7 @@ footer {
     		overflow: visible;
 		}
 	footer {
-		position: fixed;
+		position: relative;
 		margin: 0;
 		padding: 0;
 		bottom: 5px;
